@@ -5,6 +5,7 @@
 package org.mozilla.gecko.sync.repositories.android;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 
 import org.mozilla.gecko.background.common.log.Logger;
 import org.mozilla.gecko.sync.repositories.InactiveSessionException;
@@ -29,7 +30,6 @@ import org.mozilla.gecko.sync.repositories.domain.Record;
 import android.content.ContentUris;
 import android.database.Cursor;
 import android.net.Uri;
-import android.util.SparseArray;
 
 /**
  * You'll notice that all delegate calls *either*:
@@ -71,7 +71,7 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
    * In this case, we search the database for a matching record explicitly using
    * <code>findByRecordString</code>.
    */
-  protected SparseArray<String> recordToGuid;
+  protected HashMap<Integer, String> recordToGuid;
 
   public AndroidBrowserRepositorySession(Repository repository) {
     super(repository);
@@ -105,7 +105,6 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
    *
    * For example, a session subclass might skip records of an unsupported type.
    */
-  @SuppressWarnings("static-method")
   public boolean shouldIgnore(Record record) {
     return false;
   }
@@ -116,7 +115,6 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
    *
    * Example: translating remote folder names into local names.
    */
-  @SuppressWarnings("static-method")
   protected void fixupRecord(Record record) {
     return;
   }
@@ -136,7 +134,6 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
    * @return The transformed record. Can be null.
    * @throws NullCursorException
    */
-  @SuppressWarnings("static-method")
   protected Record transformRecord(Record record) throws NullCursorException {
     return record;
   }
@@ -682,12 +679,12 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
     if (recordToGuid == null) {
       createRecordToGuidMap();
     }
-    return recordToGuid.get(Integer.valueOf(recordString.hashCode()));
+    return recordToGuid.get(new Integer(recordString.hashCode()));
   }
 
   protected void createRecordToGuidMap() throws NoGuidForIdException, NullCursorException, ParentNotFoundException {
     Logger.info(LOG_TAG, "BEGIN: creating record -> GUID map.");
-    recordToGuid = new SparseArray<String>();
+    recordToGuid = new HashMap<Integer, String>();
 
     // TODO: we should be able to do this entire thing with string concatenations within SQL.
     // Also consider whether it's better to fetch and process every record in the DB into
@@ -702,7 +699,7 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
         if (record != null) {
           final String recordString = buildRecordString(record);
           if (recordString != null) {
-            recordToGuid.put(Integer.valueOf(recordString.hashCode()), record.guid);
+            recordToGuid.put(new Integer(recordString.hashCode()), record.guid);
           }
         }
         cur.moveToNext();
@@ -760,7 +757,7 @@ public abstract class AndroidBrowserRepositorySession extends StoreTrackingRepos
     if (recordToGuid == null) {
       createRecordToGuidMap();
     }
-    recordToGuid.put(Integer.valueOf(recordString.hashCode()), guid);
+    recordToGuid.put(new Integer(recordString.hashCode()), guid);
   }
 
   protected abstract Record prepareRecord(Record record);
